...
        descriptionLabel.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(descriptionLabel)
        descriptionLabel.leadingAnchor.constraint(equalTo: profileImageView.leadingAnchor).isActive = true
        descriptionLabel.topAnchor.constraint(equalTo: linkLabel.bottomAnchor, constant: 8).isActive = true
        
        let logautButton = UIButton.systemButton(with: UIImage(imageLiteralResourceName: "ProfileLogaut"), target: self, action: #selector(self.didTapLogautButton))
        logautButton.accessibilityIdentifier = "logoutButton"
        logautButton.tintColor = UIColor(red: 0.961, green: 0.42, blue: 0.424, alpha: 1)
        logautButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(logautButton)
        logautButton.trailingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.trailingAnchor, constant: -16).isActive = true
        logautButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: 53).isActive = true
        logautButton.heightAnchor.constraint(equalToConstant: 44).isActive = true
...
   private func showAlert() {
        UIBlockingProgressHUD.dismiss()
        let alert = UIAlertController(title: "Пока, пока!", message: "Уверены, что хотите выйти?", preferredStyle: .alert)
        
        alert.addAction(UIAlertAction(title: "Нет", style: .default, handler: nil))
        
       alert.addAction(UIAlertAction(title: "Да", style: .default) { _ in
           self.presenter.logOut()
          })
        
        present(alert, animated: true)
    }
    
...
